# self_assembly

./: u_letter.txt
src/examples/behaviors/: CMakeLists.txt  blinky.c  gradient_simple.c  orbit2.c  orbit_FSM.c  orbit_original.c  preuve_desaxe.c  rectangle.c  rectangle_star.c  shape_formation.c  triangle.c  triangle_star.c
src/examples/experiments/: kilobot_blinky.argos  kilobot_orbit.argos  kilobot_orbit_FSM.argos  lab_foraging_without_obstacle.argos  orbit_original.argos  preuve_distance.argos  rectangle.argos  shape_formation.argos  triangle.argos
src/examples/loop_functions/: CMakeLists.txt
src/examples/loop_functions/Shape_loop_function/: CMakeLists.txt  shape.cpp  shape.h
